# splinther

./: .gitignore  CONTRIBUTING.md  Cargo.toml  HEAT_PIPES_STATUS.md  IMPLEMENTATION.md  LICENSE  README.md  build.sh  pyproject.toml  requirements.txt
configs/: example_reactor.json  large_reactor.yaml  small_reactor.yaml
examples/: basic_usage.py  full_integration.py  parameter_study.py
python/splinther_config/: __init__.py  config_loader.py  export.py  validator.py
python/tests/: test_config.py
src/: constants.rs  fluid_dynamics.rs  heat_transfer.rs  lib.rs  pressure.rs  thermal_hydraulics.rs
