[package]
name = "splinther"
version = "0.1.0"
edition = "2021"
authors = ["Splinther Contributors"]
description = "Nuclear Reactor Fluid Dynamics Calculator for Space Exploration"
license = "MIT"

[lib]
name = "splinther"
crate-type = ["lib", "cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.20", features = ["extension-module"] }
